--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@next/mdx": "^14.2.16",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@sentry/nextjs": "^8.39.0",
     "@supabase/supabase-js": "^2.46.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
@@ -40,11 +42,15 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.13",
     "gray-matter": "^4.0.3",
+    "ioredis": "^5.7.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^15.5.3",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.3.0",
+    "plausible-tracker": "^0.3.9",
+    "puppeteer": "^23.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -53,12 +59,7 @@
     "reading-time": "^1.5.0",
     "resend": "^4.0.0",
     "tailwind-merge": "^2.5.4",
-    "zod": "^3.23.8",
-    "puppeteer": "^23.8.0",
-    "xlsx": "^0.18.5",
-    "jspdf": "^2.5.2",
-    "@sentry/nextjs": "^8.39.0",
-    "plausible-tracker": "^0.3.9"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
@@ -69,9 +70,12 @@
     "@types/node": "^22.8.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.16",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
